
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Remove leftover checkout and edit, and cancel actions for sablon and proposal templates. [njohner]
- Do not include paragraphs in comittee table of contents. [njohner]
- Add TaskReminderActivity object. [elioschmutz]
- Make paragraph templates deletable. [Rotonen]
- Add ReminderSetting SQL Model. [elioschmutz]
- Add task-reminder activity settings. [elioschmutz]
- Preserve proposal document title for proposal documents of submitted proposals. [Rotonen]
- Support adding tasks via REST API. [phgross]
- Reindex issuer of all proposals. [phgross]
- Correct info messages in meetings. [njohner]
- Add proposal tabs to repository folders. [Rotonen]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]
- Only set proposal to decided when excerpt has been generated and returned. [njohner]
- Add actions pointing to the meeting and protocol debug views. [njohner]
- Fix bug with document without file in a dossiertemplate. [njohner]
- Prevent replacing files on proposal templates with non-.docx files via quickupload. [Rotonen]
- Add an upgrade step to fix broken-by-broken-protocol-excerpt journal entries on dossiers. [Rotonen]
- Do not list documents within dossiertemplates when creating a document from template. [njohner]
- Correct width of subdossier table in dossier details pdf. [njohner]
- Do not set document date during check-in or cancel. [njohner]
- Add Activity settings for Dispositions. [njohner]
- Disallow grouping tasks by the checkbox column in list views. [Rotonen]
- Add feature to generate a task listing pdf when resolving a dossier. [njohner]
- Set adhoc agendaitem filename to title without prefixing it. [njohner]
- Disallow dossier from template when adding businesscasedossier is disallowed. [njohner]
- Change wording for "Return Excerpt" from "zurücksenden" to "ablegen". [njohner]
- Add modification and creation date column to document listings. [njohner]